mvp slider visible@s ok, fix iPad

--- a/src/app/layout/angolacables/angolacables.component.css
+++ b/src/app/layout/angolacables/angolacables.component.css
@@ -233,7 +233,7 @@
 
 
 /* Responsive */
-@media (max-width: 480px) {
+@media (max-width: 380px) {
 
 
     .modern-accordion .uk-accordion-title {
